GitVersion1/objects/Potential_Calc_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <label>Default Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable on Add Row</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_name__c</fullName>
        <label>Field name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Potential Calc Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>Disable__c</columns>
        <columns>Default_Value__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_name__c</columns>
        <columns>Type__c</columns>
        <columns>Locale__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>